--- a/mainapp/templates/mainapp/acsm.html
+++ b/mainapp/templates/mainapp/acsm.html
@@ -6,8 +6,8 @@
     <div class="container" id="page-top">
 
         <button class="back__to__main">
-            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
-                    alt="">
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+                    class="arrow__back__to__main text-align-center" alt="">
                 На главную</a>
         </button>
 
@@ -18,99 +18,95 @@
                 <div class="header__inside__pages">Услуги центра</div>
             </div>
 
-            <div class="col-xl-7">
+            <div class="col-md-7 col-xl-7">
                 <div class="box__service__inside__pages">
-                    <p class="header__service   ">Аттестация сварщиков <br> и специалистов сварочного производства</p>
+                    <p class="header__service">Аттестация сварочных материалов</p>
                     <div class="inside__pages__online__zayavka__button  ">
-                        <button class="button__zayavka__inside__pages" data-toggle="modal" data-target="#modal-statement">Оставить
+                        <button class="button__zayavka__inside__pages" data-toggle="modal"
+                            data-target="#modal-statement">Оставить
                             заявку</button>
                     </div>
-                    <p class="small__header__pages">
-                        Для заключения договора на аттестацию сварщика и зачисления в группу специальной подготовки
-                        перед аттестацией заявитель представляет в аттестационный центр следующие документы:
+                    <p class="subtitle_medium_text">
+                        Аттестация сварочных материалов
+                        в соответствии с РД 03-613-03 «Порядок применения сварочных материалов при изготовлении,
+                        монтаже, ремонте и реконструкции технических устройств для опасных производственных объектов»
                     </p>
-                    <div class="list__item__text">
-                        <p>• Карточку предприятия с банковскими реквизитами; <br>
-                            • Заявку в 2-х экземплярах (номер присваивается в аттестационном центре); <br>
-                            • Документ и копию документа о начальной подготовке (переподготовке, повышении
-                            квалификации) по
-                            специальности; <br>
-                            • Документ и копию документа о повышении квалификации с присвоенным разрядом не ниже
-                            указанного
-                            <br> в руководящей и нормативно-технической документации на сварку; <br>
-                            • Аттестационное удостоверение (если аттестация не первичная); <br>
-                            • Справку об общем стаже работы по сварке (копию или выписку из трудовой книжки); <br>
-                            • Цветную фотографию размером 3*4; <br>
-                            • Медицинскую справку установленного образца об отсутствии противопоказаний к работе
-                            сварщиком.</p>
-                        <div class="line__inside_pages"></div>
+
+                    <div class="line_inside_pages"></div>
+                    <div class="subtitle_info_service">
+                        Перечень видов сварочных материалов, по которым производится аттестация в Аттестационном пункте. 
                     </div>
-                    <div class="list__item__text__box">
-                        <p class="small__header__pages">Необходимо знать</p>
-                        <p class="inside__text">1. Если сварщик имеет опыт работы по ручной сварке, то в стаж его
-                            работы при аттестации на сварку механизированными и автоматическими способами сварки
-                            разрешается засчитывать стаж работы по ручной сварке.
+                    <div class="introduction_text_two">
+                        <p>
+                            Гг -	Газы горючие;
                         </p>
-                        <p class="inside__text">2. Если сварщик имеет опыт работы по механизированным способам
-                            сварки, то в стаж его работы при аттестации на сварку автоматическими способами сварки
-                            разрешается засчитывать стаж работы по механизированным способам сварки.
+                        <p>
+                            Гз -	Газы защитные;
                         </p>
-                        <p class="inside__text">3. Если кандидат самостоятельно представляет заявку на проведение
-                            аттестации, он должен иметь разряд не ниже 4-го.
+                        <p>
+                            Пп -	Проволока порошковая и ленты порошковые;
                         </p>
-                        <div class="line__inside_pages"></div>
-
-                        <p class="small__header__pages">
-                            Аттестация сварщика подразделяется на 4 звена
+                        <p>
+                            Пс -	Проволока сварочная сплошного сечения;
                         </p>
-
-                        <p class="inside__text">
-                            1. Первичную аттестацию, которую проходят сварщики, не имевшие ранее допуска к сварке
-                            соединений оборудования, конструкций и трубопроводов, подконтрольных Ростехнадзору. </p>
-                        <p class="inside__text">
-                            2. Периодическую аттестацию, которую проходят сварщики в целях продления указанного срока
-                            действия их аттестационных удостоверений на выполнение соответствующих сварочных работ. </p>
-                        <p class="inside__text">
-                            3. Дополнительную аттестацию, которую проходят сварщики, прошедшие первичную аттестацию,
-                            перед
-                            их допуском к сварочным работам, не указанным в их аттестационных удостоверениях, а также
-                            после перерыва свыше 6 месяцев в выполнении сварочных работ, указанных в их аттестационных
-                            удостоверениях. </p>
-                        <p class="inside__text">
-                            4. Внеочередную аттестацию, которую проходят сварщики перед их допуском к выполнению сварки
-                            после их временного отстранения от работы за нарушение технологии сварки или повторяющееся
-                            неудовлетворительное качество выполненных ими производственных сварных соединений. </p>
-
-                        <div class="box__yellow_bg">
-                            <p class="specialist__text__small">Аттестация сварщиков для работы на объектах МН ОАО «АК
-                                «Транснефть» проводится с учетом дополнительных требований и особенностей выполнения
-                                работ
-                                на объектах ОАО «АК «Транснефть», изложенных в <a href="#" download="">РД-03.120.10-КТН-001-11</a>
-                                «Положение об аттестации сварочного производства на объектах ОАО «АК «Транснефть»»</p>
-
-                        </div>
+                        <p>
+                            Ф -	Флюсы сварочные;
+                        </p>
+                        <p>
+                            Эп -	Электроды плавящиеся для дуговой сварки;
+                        </p>                            
                     </div>
+                    <div class="line_inside_pages"></div>
+                    <div class="subtitle_info_service">
+                        Перечень групп технических устройств, на которые производится аттестация сварочных материалов в ООО «НАКС Стандарт-Диагностика» (АЦСМ-62): 
+                    </div>
+                    <div class="introduction_text_two">
+                        <p>
+                            ГДО -	горнодобывающее оборудование;
+                        </p>
+                        <p>
+                            ГО -	газовое оборудование;
+                        </p>
+                        <p>
+                            КО -	котельное оборудование;
+                        </p>
+                        <p>
+                            МО -	металлургическое оборудование;
+                        </p>
+                        <p>
+                            НГДО -	нефтегазодобывающее оборудование;
+                        </p>
+                        <p>
+                            ОТОГ -	оборудование для транспортировки опасных грузов;
+                        </p>                            
+                        <p>
+                            ОХНВП -	оборудование химических, нефтехимических, нефтеперерабатывающих и взрывопожароопасных производств;
+                        </p>                            
+                        <p>
+                            ПТО -	подъемно-транспортное оборудование
+                        </p>                            
+                        <p>
+                            СК -	строительные конструкции;
+                        </p>                            
+                    </div>               
+
                 </div>
-
             </div>
 
-            <div class="col-xl-2">
+            <div class="col-sm-6 col-md-4 col-xl-2">
 
-               {% include 'mainapp/includes/side_panel_links.html' %}
+                {% include 'mainapp/includes/side_panel_links_acsm.html' %}
 
             </div>
 
         </div>
 
 
-        <div class="line__otstup__inside__pages"></div>
-
         <button class="back__to__main">
-            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
-                    alt="">
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+                    class="arrow__back__to__main text-align-center" alt="">
                 На главную</a>
         </button>
-        <div class="line__otstup__inside__pages"></div>
     </div>
 </div>
 {% endblock  %}
