--- a/mainapp/templates/mainapp/acst.html
+++ b/mainapp/templates/mainapp/acst.html
@@ -6,8 +6,8 @@
     <div class="container" id="page-top">
 
         <button class="back__to__main">
-            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
-                    alt="">
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+                    class="arrow__back__to__main text-align-center" alt="">
                 На главную</a>
         </button>
 
@@ -18,99 +18,173 @@
                 <div class="header__inside__pages">Услуги центра</div>
             </div>
 
-            <div class="col-xl-7">
+            <div class="col-md-7 col-xl-7">
                 <div class="box__service__inside__pages">
-                    <p class="header__service   ">Аттестация сварщиков <br> и специалистов сварочного производства</p>
+                    <p class="header__service">Аттестация производственной технологии сварки (наплавки)
+                    </p>
                     <div class="inside__pages__online__zayavka__button  ">
-                        <button class="button__zayavka__inside__pages" data-toggle="modal" data-target="#modal-statement">Оставить
+                        <button class="button__zayavka__inside__pages" data-toggle="modal"
+                            data-target="#modal-statement">Оставить
                             заявку</button>
                     </div>
-                    <p class="small__header__pages">
-                        Для заключения договора на аттестацию сварщика и зачисления в группу специальной подготовки
-                        перед аттестацией заявитель представляет в аттестационный центр следующие документы:
+                    <p class="subtitle_medium_text">
+                        АЦСТ-132 ООО «НАКС Стандарт-Диагностика» проводит производственную аттестацию технологий сварки
+                        (наплавки) НАКС в соответствии с РД 03-615-03. Этот документ устанавливает порядок применения
+                        технологий сварки (наплавки), предназначенных для использования и/или используемых при
+                        изготовлении, монтаже, ремонте и реконструкции технических устройств для опасных
+                        производственных объектов, а также требования и условия проведения испытаний,
+                        освидетельствования и оформления их результатов.
                     </p>
-                    <div class="list__item__text">
-                        <p>• Карточку предприятия с банковскими реквизитами; <br>
-                            • Заявку в 2-х экземплярах (номер присваивается в аттестационном центре); <br>
-                            • Документ и копию документа о начальной подготовке (переподготовке, повышении
-                            квалификации) по
-                            специальности; <br>
-                            • Документ и копию документа о повышении квалификации с присвоенным разрядом не ниже
-                            указанного
-                            <br> в руководящей и нормативно-технической документации на сварку; <br>
-                            • Аттестационное удостоверение (если аттестация не первичная); <br>
-                            • Справку об общем стаже работы по сварке (копию или выписку из трудовой книжки); <br>
-                            • Цветную фотографию размером 3*4; <br>
-                            • Медицинскую справку установленного образца об отсутствии противопоказаний к работе
-                            сварщиком.</p>
-                        <div class="line__inside_pages"></div>
+                    <div class="line_inside_pages"></div>
+                    <div class="box_service_info">
+                        <p>Аттестации НАКС подлежат технологии выполнения сварки и наплавки, используемые при
+                            изготовлении,
+                            монтаже, ремонте и реконструкции технических устройств, оборудования и сооружений опасных
+                            производственных объектов.</p>
+                        <p>Производственную аттестацию технологии сварки и наплавки НАКС осуществляют с целью
+                            подтверждения
+                            того, что организация, занимающаяся изготовлением, монтажом, ремонтом или реконструкцией
+                            технических устройств, оборудования и сооружений, применяемых на опасных производственных
+                            объектах, обладает техническими, организационными возможностями и квалифицированными кадрами
+                            для
+                            производства сварки (наплавки) по аттестованным технологиям, а также проверки того, что
+                            сварные
+                            соединения (наплавки), выполненные в условиях конкретного производства по аттестуемой
+                            технологии, обеспечивают соответствие требованиям к опасным производственным объектам..</p>
+                        <p>Для проведения любой производственной аттестации технологии сварки (наплавки) в НАКС
+                            организация-заявитель должна представить соответствующую документацию, содержащую указания о
+                            применяемом сварочном и вспомогательном оборудовании, способах сварки (наплавки),
+                            используемых
+                            основных и сварочных материалах, конструкции и размерах свариваемых деталей и сварных швов,
+                            режимах и технологических приемах выполнения сварочных работ, требования по оценке качества
+                            сварных соединений.</p>
                     </div>
-                    <div class="list__item__text__box">
-                        <p class="small__header__pages">Необходимо знать</p>
-                        <p class="inside__text">1. Если сварщик имеет опыт работы по ручной сварке, то в стаж его
-                            работы при аттестации на сварку механизированными и автоматическими способами сварки
-                            разрешается засчитывать стаж работы по ручной сварке.
+                    <div class="subtitle_info_service">
+                        Производственная аттестация технологий сварки подразделяется на:
+                    </div>
+                    <div class="box_service_info">
+                        <p>- Первичную производственную аттестацию технологии сварки и наплавки проводят в случаях,
+                            когда организация, занимающаяся изготовлением, монтажом, ремонтом или реконструкцией
+                            технических устройств, оборудования и сооружений опасных производственных объектов, впервые
+                            применяет аттестуемую технологию, либо в тех случаях, когда в технологию, прошедшую
+                            производственную аттестацию, внесены изменения, выходящие за пределы области
+                            распространения, указанные в «Свидетельстве НАКС о готовности организации к использованию
+                            аттестованной технологии» или в нормативных документах. Первичную производственную
+                            аттестацию технологии сварки и наплавки проводят также при отсутствии оформленного
+                            разрешения органов Ростехнадзора на применяемую организацией технологию сварки и наплавки;
                         </p>
-                        <p class="inside__text">2. Если сварщик имеет опыт работы по механизированным способам
-                            сварки, то в стаж его работы при аттестации на сварку автоматическими способами сварки
-                            разрешается засчитывать стаж работы по механизированным способам сварки.
+                        <p>- Периодическую производственную аттестацию технологии сварки и наплавки проводят через
+                            каждые четыре года в случаях, когда организация, занимающаяся изготовлением, монтажом,
+                            ремонтом или реконструкцией технических устройств, оборудования и сооружений опасных
+                            производственных объектов, постоянно применяет технологию, прошедшую первичную
+                            производственную аттестацию в своей организации, а также после перерыва в применении данной
+                            технологии свыше одного года; </p>
+                        <p>- Внеочередную производственную аттестацию технологии сварки и наплавки проводят по
+                            требованию территориальных органов Ростехнадзора в случаях, когда организация, занимающаяся
+                            изготовлением, монтажом, ремонтом или реконструкцией технических устройств, оборудования и
+                            сооружений опасных производственных объектов, выпускает продукцию, не соответствующую
+                            требованиям нормативных документов в части обеспечения промышленной безопасности; а также на
+                            основании представления руководителя службы (отдела, лаборатории и др.) технического
+                            контроля организации, занимающейся изготовлением, монтажом, ремонтом или реконструкцией
+                            технических устройств, оборудования и сооружений опасных производственных объектов, или
+                            заказчика в связи с ухудшением качества сварных соединений (наплавок).</p>
+                        <p>- Внеочередную производственную аттестацию технологии сварки и наплавки проводят по
+                            требованию территориальных органов Ростехнадзора в случаях, когда организация, занимающаяся
+                            изготовлением, монтажом, ремонтом или реконструкцией технических устройств, оборудования и
+                            сооружений опасных производственных объектов, выпускает продукцию, не соответствующую
+                            требованиям нормативных документов в части обеспечения промышленной безопасности; а также на
+                            основании представления руководителя службы (отдела, лаборатории и др.) технического
+                            контроля организации, занимающейся изготовлением, монтажом, ремонтом или реконструкцией
+                            технических устройств, оборудования и сооружений опасных производственных объектов, или
+                            заказчика в связи с ухудшением качества сварных соединений (наплавок).</p>
+                        <p class="introduction_text_warning">
+                            Подробную информацию об услугах по аттестации технологии сварки (наплавки), сроках
+                            проведения и стоимости, вы можете узнать у специалистов АЦСТ-132 ООО «НАКС
+                            Стандарт-Диагностика».
                         </p>
-                        <p class="inside__text">3. Если кандидат самостоятельно представляет заявку на проведение
-                            аттестации, он должен иметь разряд не ниже 4-го.
-                        </p>
-                        <div class="line__inside_pages"></div>
+                    </div>
+                    <div class="subtitle_info_service">
+                        Перечень документов,
+                        представляемых в аттестационный центр АЦСТ-132 для проведения
+                        производственной аттестации технологии сварки (наплавки)
 
-                        <p class="small__header__pages">
-                            Аттестация сварщика подразделяется на 4 звена
-                        </p>
+                    </div>
 
-                        <p class="inside__text">
-                            1. Первичную аттестацию, которую проходят сварщики, не имевшие ранее допуска к сварке
-                            соединений оборудования, конструкций и трубопроводов, подконтрольных Ростехнадзору. </p>
-                        <p class="inside__text">
-                            2. Периодическую аттестацию, которую проходят сварщики в целях продления указанного срока
-                            действия их аттестационных удостоверений на выполнение соответствующих сварочных работ. </p>
-                        <p class="inside__text">
-                            3. Дополнительную аттестацию, которую проходят сварщики, прошедшие первичную аттестацию,
-                            перед
-                            их допуском к сварочным работам, не указанным в их аттестационных удостоверениях, а также
-                            после перерыва свыше 6 месяцев в выполнении сварочных работ, указанных в их аттестационных
-                            удостоверениях. </p>
-                        <p class="inside__text">
-                            4. Внеочередную аттестацию, которую проходят сварщики перед их допуском к выполнению сварки
-                            после их временного отстранения от работы за нарушение технологии сварки или повторяющееся
-                            неудовлетворительное качество выполненных ими производственных сварных соединений. </p>
-
-                        <div class="box__yellow_bg">
-                            <p class="specialist__text__small">Аттестация сварщиков для работы на объектах МН ОАО «АК
-                                «Транснефть» проводится с учетом дополнительных требований и особенностей выполнения
-                                работ
-                                на объектах ОАО «АК «Транснефть», изложенных в <a href="#" download="">РД-03.120.10-КТН-001-11</a>
-                                «Положение об аттестации сварочного производства на объектах ОАО «АК «Транснефть»»</p>
+                    <div class="box_service_info">
+                        <p>1. Письмо о проведении производственной аттестации технологий сварки (наплавки).</p>
+                        <p>2.Заявка для каждого способа сварки (наплавки) и группы опасных технических устройств (с
+                            учетом вида технологии).</p>
+                        <p>3. Пакет документов для акта проверки (см. столбец «Подтверждающий документ»).
+                            сварочные материалы);</p>
+                        <p>4. Копия приказа о назначении лица, ответственного за технические вопросы проведения
+                            производственной аттестации.</p>
+                        <p>5. Приложения к заявке:</p>
+                        <div class="introduction_text">
+                            <p>
+                                • Перечень аттестованного сварочного оборудования с копиями свидетельств НАКС об
+                                аттестации
+                                оборудования, сертификатов соответствия РФ.
+                            </p>
+                            <p>
+                                • Перечень аттестованных сварщиков и специалистов (с копиями удостоверений и протоколов
+                                аттестации), допущенных к работам по заявленным способам сварки (наплавки) и группам
+                                опасных технических устройств.
+                            </p>
+                            <p>
+                                • Перечень аттестованных лабораторий контроля сварных соединений и специалистов по
+                                контролю (с копиями документов по аттестации лаборатории, удостоверений специалистов по
+                                контролю качества сварных соединений и документов о поверке оборудования для
+                                разрушающего контроля; договоры с лабораториями).
+                            </p>
+                        </div>
+                        <p>6. Производственно-технологическая документация предприятия-заявителя, утвержденная его
+                            руководством, включающая карты технологического процесса сварки (наплавки) производственных
+                            сварных соединений и требования к методам контроля с указанием количественных характеристик
+                            качества сварных соединений.</p>
+                        <p>7. Протоколы контроля производственных сварных соединений в течение 1 года до окончания срока
+                            действия предыдущей аттестации, подписанная руководителем лаборатории и заверенная печатью
+                            организации-заявителя (при внеочередной и периодической аттестации).</p>
+                        <p>8. Сертификаты (для каждого контрольного сварного соединения) на основные материалы.</p>
+                        <p>9. Сертификаты (для каждого контрольного сварного соединения) и копии свидетельств НАКС об
+                            аттестации сварочных (наплавочных) материалов (электроды, проволока, газы и пр.).</p>
+                        <p>10. Акты, протоколы, заключения по контролю качества контрольных сварных соединений,
+                            выполненных предприятием-заявителем, представляемые лабораторией контроля ООО «НАКС
+                            Стандарт-Диагностика».</p>
+                        <p>11. Регистрационные документы предприятия-заявителя (копии):</p>
+                        <div class="introduction_text">
+                            <p>
+                                • Свидетельство о регистрации.
+                            </p>
+                            <p>
+                                • Свидетельство о внесении в единый госреестр юридических лиц.
+                            </p>
+                            <p>
+                                • Свидетельство о постановке на налоговый учет.
+                            </p>
+                            <p>
+                                • Выписка из ЕГРЮЛ.
+                            </p>
 
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
 
-            <div class="col-xl-2">
+            <div class="col-sm-6 col-md-4 col-xl-2">
 
-               {% include 'mainapp/includes/side_panel_links.html' %}
+                {% include 'mainapp/includes/side_panel_links_acst.html' %}
 
             </div>
 
         </div>
 
 
-        <div class="line__otstup__inside__pages"></div>
-
         <button class="back__to__main">
-            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
-                    alt="">
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+                    class="arrow__back__to__main text-align-center" alt="">
                 На главную</a>
         </button>
-        <div class="line__otstup__inside__pages"></div>
     </div>
 </div>
 {% endblock  %}
