--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -33,6 +33,10 @@
   <!-- End Include Modal -->
 
   <!-- Include HEADER -->
+  {% include 'mainapp/includes/header_top.html' %}
+  <!-- End Include HEADER -->
+
+  <!-- Include HEADER -->
   {% include 'mainapp/includes/header.html' %}
   <!-- End Include HEADER -->
 
