--- a/mainapp/templates/mainapp/doc_new.html
+++ b/mainapp/templates/mainapp/doc_new.html
@@ -104,7 +104,7 @@
           </p>
           <div class="list__service__column">
             <p class="small__column__text">
-              <a href="{% url 'attsv' %}">Аттестация сварщиков и <br> специалистов
+              <a href="{% url 'atso' %}">Аттестация сварщиков и <br> специалистов
                 сварочного производства</a>
             </p>
             <p class="small__column__text">
