--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -1,14 +1,13 @@
 <div class="background">
     <div class="bg__gradient">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-12">
+            <div class="row">
+                <div class="col-xl-6">
                     <div class="bg__text">
                         <p class="bg__text__head">Группа компаний "Стандарт Диагностика"</p>
-                        <p class="bg__text__small">Аттестационный центр ООО "НАКС Стандарт Диагностика" осуществляет аттестационную деятельность в рамках Системы
-                            аттестации сварочного производства Ростехнадзора (САСв Ростехнадзора), независимую
-                            оценку квалификации в области сварки, а также оказывает услуги по неразрушающему контролю,
-                            диагностике, разрушающим и другим видам испытаний</p>
+                        <p class="bg__text__small">АНО ДПО «Стандарт-Диагностика» входит в Группу компаний «Диагностика», которая была основана в 1994 году.
+                            Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году. Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996 г.
+                            </p>
                         <p class="bg__text__naks">ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемой
                             организации Ассоциация «НАКС».</p>
                         <p class="naks__web">
@@ -16,12 +15,7 @@
                                 &nbsp | &nbsp </a>
                             <a href="http://www.spks.naks.ru" target="_blank" title="Совет по профессиональным квалификациям в области сварки">www.spks.naks.ru</a>
                         </p>
-                        <p class="bg__text__small">АНО ДПО "Стандарт-Диагностика"  реализует программы дополнительного профессионального образования,
-                        программы профессионального обучения и переподготовки (программы профессиональной подготовки по профессиям рабочих,
-                        должностям служащих; программы переподготовки рабочих, служащих; программы повышения квалификации рабочих, служащих),
-                        дополнительные профессиональные образовательные программы повышения квалификации в соответствии с
-                        Федеральным законом от 29 декабря 2012 г. N 273-ФЗ «Об образовании в Российской Федерации»</p>
-
+                      
                         <div class="online__zayavka__button">
                             <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Подать заявку</button>
                         </div>
