--- a/mainapp/templates/mainapp/includes/footer.html
+++ b/mainapp/templates/mainapp/includes/footer.html
@@ -8,12 +8,11 @@
                     <img src="{% static 'img/logo_ac_footer.png' %}" alt="">
                 </div>
                 <div class="description">
-                    Коллектив «Диагностики» из более чем 200 специалистов представляет собой очень удачное сочетание
-                    профессионалов с большим производственным опытом и способных молодых людей постоянно повышающих свою
-                    квалификацию.
+                    АНО ДПО «Стандарт-Диагностика» входит в Группу компаний «Диагностика», которая была основана в 1994 году.
+                    Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году. Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996 г.
                 </div>
 
-                <a href="political.html" class="political__footer">Политика конфиденциальности</a>
+                <a href="{% url 'political' %}" class="political__footer">Политика конфиденциальности</a>
                 <div class="line__footer__small"></div>
                 <div class="prava__footer">
                     © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
@@ -87,7 +86,7 @@
                         Разработано в - НАКС Медиа
                     </p>
                     <div class="mob__version">
-                            <a href="political.html" class="mob__political__footer">Политика конфиденциальности</a>
+                            <a href="{% url 'political' %}" class="mob__political__footer">Политика конфиденциальности</a>
                             <div class="mob__line__footer__small"></div>
                             <div class="mob__prava__footer">
                                 © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
