--- a/mainapp/templates/mainapp/includes/modal-window.html
+++ b/mainapp/templates/mainapp/includes/modal-window.html
@@ -39,15 +39,12 @@
                                 <label for="" class="col-form-label col-form-label-sm">Вид заявки(-ок)</label>
                                 <div class="choose__item">
                                     <ul class="items">
-                                        <li data-selected="0" data-guid="3">Аттестация технологий
-                                            сварки</li>
-                                        <li data-selected="0" data-guid="3">Аттестация сварочных
-                                            материалов</li>
-                                        <li data-selected="0" data-guid="3">Аттестация сварочного
-                                            оборудования</li>
+                                        <li data-selected="0" data-guid="3">Аттестация сварочного оборудования</li>
+                                        <li data-selected="0" data-guid="3">Аттестация сварочных материалов</li>
+                                        <li data-selected="0" data-guid="3">Аттестация производственной <br> аттестации технологии сварки (наплавки)</li>
                                         <li data-selected="0" data-guid="2">Аттестация сварщиков <br>
                                             и специалистов сварочного производства</li>
-                                        <li data-selected="0" data-guid="1">Лаборатория разрушающего <br>
+                                        <li data-selected="0" data-guid="1">Лаборатория разрушающего 
                                             и неразрушающего контроля</li>
                                     </ul>
                                 </div>
