--- a/mainapp/templates/mainapp/includes/side_panel_links_acsm.html
+++ b/mainapp/templates/mainapp/includes/side_panel_links_acsm.html
@@ -3,14 +3,10 @@
     <div class="box_doc_right_column">
         <p class="trebovanie__right_column">
             Требования к аттестации:
-        </p>
-        <a data-info="PB_273" href="{% link_holder 'PB_273' %}" class="trebovanie__list">
-            <p>
-                • ПБ 03-273-99</p>
-        </a>
+        </p>     
         <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
             <p>
-                • РД 03-614-03</p>
+                • РД 03-613-03</p>
         </a>
         <div class="line_side_panel"></div>
     </div>
@@ -20,11 +16,11 @@
         </p>
         <a data-info="PB_273" href="{% link_holder 'PB_273' %}" class="trebovanie__list">
             <p>
-                Форма заявки на аттестацию сварочного оборудования потребителя</p>
+                Форма заявки на аттестацию сварочных материалов производителя</p>
         </a>
         <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
             <p>
-                 Форма заявки на аттестацию сварочного оборудования производителя</p>
+                Форма заявки на аттестацию сварочных материалов потребителя</p>
         </a>
         <div class="line_side_panel"></div>
     </div>
