--- a/mainapp/templates/mainapp/includes/side_panel_links_atsssp.html
+++ b/mainapp/templates/mainapp/includes/side_panel_links_atsssp.html
@@ -10,21 +10,25 @@
         </a>
         <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
             <p>
-                • РД 03-614-03</p>
+                • РД 03-495-02 </p>
         </a>
         <div class="line_side_panel"></div>
     </div>
     <div class="box_doc_right_column">
         <p class="trebovanie__right_column">
             Заявки
-        </p>
-        <a data-info="PB_273" href="{% link_holder 'PB_273' %}" class="trebovanie__list">
+        </p>      
+        <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
             <p>
-                Форма заявки на аттестацию сварочного оборудования потребителя</p>
+                Заявка на специалиста сварочного производства I уровня 1</p>
         </a>
         <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
             <p>
-                 Форма заявки на аттестацию сварочного оборудования производителя</p>
+                Заявка на специалиста сварочного производства II,III уровня-2</p>
+        </a>
+        <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
+            <p>
+                Заявка на продление аттестации сварщиков</p>
         </a>
         <div class="line_side_panel"></div>
     </div>
