--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -5,15 +5,27 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .box_content_page { padding: 45px 0px 45px; }
 
+@media screen and (max-width: 992px) { .box_content_page { padding: 25px 0px 25px; } }
+
 .line__otstup__inside__pages { margin-top: 35px; margin-bottom: 35px; }
 
-.back__to__main { border: none; background: transparent; font-size: 14px; padding: 0px; margin-top: 15px; margin-bottom: 15px; }
+.back__to__main { border: none; background: transparent; font-size: 14px; padding: 25px 0px 25px; }
 
 .back__to__main a { text-decoration: none; color: #007bff; }
 
 .arrow__back__to__main { margin-right: 5px; }
 
 .sider__bar { position: sticky; top: 4rem; z-index: 1000; height: calc(45vh); }
+
+.box_header_top { background-color: #eeeeee; padding: 7px; }
+
+.time_work { font-size: 12px; font-weight: 350; color: #000; text-align: center; margin-bottom: 0px; }
+
+.time_no_work { font-size: 12px; font-weight: 3450; color: red; text-align: center; margin-bottom: 0px; }
+
+.profstandart_header_top_button { text-align: right; }
+
+.profstandart_header_top_button a { text-decoration: none; }
 
 @media screen and (max-width: 576px) { .box__items { text-align: center; } }
 
@@ -45,7 +57,7 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .feedback a { text-decoration: none; }
 
-@media screen and (max-width: 992px) { .feedback { background-color: #5e7daf; padding: 10px 25px; margin-top: 10px; border-radius: 3px; justify-content: center; }
+@media screen and (max-width: 992px) { .feedback { background-color: #005bbb; padding: 10px 25px; margin-top: 10px; border-radius: 3px; justify-content: center; }
   .feedback a { color: #fff; } }
 
 .text__adres { font-weight: 400; font-size: 14px; color: #000; margin-bottom: 0; }
@@ -84,17 +96,19 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .bg__gradient { background: url(../img/gradient.png) no-repeat; background-size: cover; color: #fff; width: 100%; padding: 45px 0px; }
 
-.bg__text__head { font-size: 36px; font-weight: 550; color: #000; text-align: center; }
+@media screen and (max-width: 576px) { .bg__gradient { text-align: center; } }
 
-.bg__text__small { font-size: 18px; font-weight: 450; color: #000; text-align: center; line-height: 1.8; }
+.bg__text__head { font-size: 36px; font-weight: 550; color: #fff; text-align: center; }
+
+.bg__text__small { font-size: 16px; font-weight: 400; color: #fff; line-height: 1.8; }
 
 @media screen and (max-width: 320px) { .bg__text__small { font-size: 14px; } }
 
-.bg__text__naks { font-size: 16px; font-weight: 500; color: #000; text-align: center; color: #000000; }
+.bg__text__naks { font-size: 16px; font-weight: 500; color: #fff; }
 
-.bg__line { border-bottom: 1px solid #005bbb; width: 50px; text-align: center; margin: auto; margin-bottom: 15px; margin-top: 15px; }
+.bg__line { border-bottom: 1px solid #005bbb; width: 50px; margin: auto; margin-bottom: 15px; margin-top: 15px; }
 
-.online__zayavka__button { text-align: center; margin-top: 15px; }
+.online__zayavka__button { margin-top: 15px; }
 
 .button__zayavka { background-color: #005bbb; border: none; border-radius: 3px; color: #fff; font-weight: 400; padding: 10px 25px; font-size: 18px; cursor: pointer; }
 
@@ -104,15 +118,17 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .button__zayavka:focus { outline: none; box-shadow: none; }
 
-.naks__web a { text-decoration: none; color: #0173c1; }
+.naks__web a { text-decoration: none; color: #fff; }
 
-.naks__web a:hover { color: #005bbb; }
+.naks__web { font-size: 14px; font-weight: 500; margin-bottom: 10px; }
 
-.naks__web { text-align: center; font-size: 14px; font-weight: 500; margin-bottom: 10px; }
+.header__name { color: #000; font-size: 28px; font-weight: 500; margin-bottom: 25px; }
 
-.header__name { color: #000; font-size: 28px; font-weight: 500; margin-top: 80px; }
+@media screen and (max-width: 576px) { .header__name { margin-top: 25px; } }
 
-.text__medium { font-size: 18px; font-weight: 400; color: #000; margin-bottom: 15px; }
+.content_info_center { font-size: 16px; color: #353535; font-weight: 450; }
+
+.text__medium { font-size: 18px; font-weight: 450; color: #000; margin-top: 15px; margin-bottom: 15px; }
 
 .box__info__text__small { margin-left: 15px; }
 
@@ -345,33 +361,53 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .small__column__text { font-size: 14px; font-weight: 400; margin-bottom: 10px; }
 
-.header__service { font-size: 24px; font-weight: 400; color: #000; margin-top: 25px; margin-bottom: 10px; }
+.header__service { font-size: 24px; font-weight: 450; color: #000; margin-bottom: 10px; }
 
-.trebovanie__left__column { margin-top: 25px; font-size: 16px; font-weight: 400; }
+@media screen and (max-width: 992px) { .header__service { font-size: 20px; } }
 
-.box__service__inside__pages { border: 1px solid #f1f1f1; padding: 10px 25px 25px; }
+.box__service__inside__pages { padding: 25px 25px 25px; }
 
-@media screen and (max-width: 1199px) { .box__service__inside__pages { margin-top: 15px; } }
+@media screen and (max-width: 1199px) { .box__service__inside__pages { margin-top: 15px; padding: 25px 0px 25px; } }
 
-.trebovanie__list { font-size: 14px; margin-bottom: 0; }
+.subtitle_medium_text { font-size: 16px; font-weight: 500; margin-top: 15px; color: #2c2c2c; }
 
-.trebovanie__list p { margin-bottom: 5px; }
+.line_inside_pages { border: 0.5px solid #f1f1f1; margin-bottom: 25px; margin-top: 25px; }
 
-.small__header__pages { font-size: 18px; font-weight: 550; margin-top: 15px; color: #0066ac; }
+.subtitle_info_service { font-size: 18px; font-weight: 450; color: #000000; margin-top: 15px; }
 
-.list__item__text { font-size: 16px; line-height: 2; }
+.introduction_text { font-size: 16px; margin-bottom: 10px; margin-top: 10px; color: #004085; font-weight: 450; background-color: #cce5ff49; border: 0.5px solid #80bbfa4f; border-radius: 3px; padding: 15px 20px; }
 
-.line__inside_pages { border: 0.5px solid #cfcfcf; margin-bottom: 25px; margin-top: 25px; }
+.introduction_text p { margin-bottom: 0px; }
 
-.danger__text__pages { font-size: 18px; font-weight: 500; color: #0066ac; }
+.introduction_text_two { font-size: 16px; margin-bottom: 10px; margin-top: 10px; color: #856404; font-weight: 450; background-color: #fff3cd48; border: 0.5px solid #ffeeba4b; border-radius: 3px; padding: 15px 25px; }
 
-.inside__text { font-size: 16px; margin-bottom: 5px; margin-bottom: 10px; }
+.introduction_text_two p { margin-bottom: 0px; line-height: 2; }
 
-.box__yellow_bg { padding: 25px 25px; background-color: rgba(236, 236, 236, 0.8); font-size: 16px; }
+.introduction_text_warning { font-size: 16px; margin-bottom: 10px; margin-top: 10px; color: #721c24; font-weight: 450; background-color: #f8d7da48; border: 0.5px solid #f5c6cb4b; border-radius: 3px; padding: 15px 25px; }
 
-.specialist__text__small { margin-bottom: 0; }
+.introduction_text_warning p { margin-bottom: 0px; line-height: 2; }
 
-.sider__bar__service__pages { position: sticky; top: 4rem; z-index: 1000; height: calc(55vh); }
+.box_service_info { margin-top: 10px; }
+
+.box_service_info p { font-size: 15px; font-weight: 450; line-height: 1.8; margin-bottom: 15px; }
+
+.pynkti { font-size: 16px; font-weight: 400; }
+
+.trebovanie__right_column { font-size: 18px; font-weight: 450; color: #000; }
+
+.sider__bar__service__pages a { font-size: 15px; font-weight: 400; line-height: 1.2; }
+
+.line_side_panel { border: 0.5px solid #f1f1f1; margin-top: 25px; margin-bottom: 15px; }
+
+.sider__bar__service__pages { position: sticky; top: 4rem; z-index: 1000; height: calc(90vh); }
+
+@media screen and (max-width: 1900px) { .sider__bar__service__pages { height: calc(150vh); } }
+
+@media screen and (max-width: 1400px) { .sider__bar__service__pages { height: calc(150vh); } }
+
+@media screen and (max-width: 992px) { .sider__bar__service__pages { height: calc(55vh); } }
+
+@media screen and (max-width: 992px) { .box_right_column_service { display: none; } }
 
 .button__zayavka__inside__pages { background-color: #005bbb; border: none; border-radius: 3px; color: #fff; font-weight: 400; padding: 10px 25px; font-size: 18px; margin-top: 10px; margin-bottom: 15px; cursor: pointer; }
 
@@ -387,15 +423,25 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .medium__header__text__svidetelstva { font-size: 16px; font-weight: 400; }
 
-.link__inside__pages { font-size: 18px; margin-bottom: 5px; }
+.headline_center { font-size: 24px; font-weight: 450; color: #000; padding: 25px 0px; }
 
-.grafik__work { font-size: 16px; font-weight: 400; }
+.subtitle_center { font-size: 20px; font-weight: 450; }
 
-.grafik__work p { margin-bottom: 8px; }
+.small_text_center { font-size: 16px; font-weight: 350; }
 
-.grafik__red { font-size: 16px; font-weight: 400; color: red; }
+.introduction_text_center { font-size: 16px; margin-bottom: 10px; margin-top: 10px; color: #004085; font-weight: 450; background-color: #cce5ff49; border: 0.5px solid #80bbfa4f; border-radius: 3px; padding: 15px 20px; }
 
-.sider__bar__center__page { position: sticky; top: 4rem; z-index: 1000; height: calc(75vh); }
+.introduction_text_center p { margin-bottom: 10px; }
+
+.headline_right_column { font-size: 18px; font-weight: 450; color: #000; padding: 0px 25px; }
+
+.line_left { border-left: 0.5px solid #f1f1f1; }
+
+.box_center_img { padding: 25px 25px; }
+
+.img_box_center { margin-bottom: 2px; margin-right: 2px; }
+
+.img_box_center:hover { transition: 0.2s; -moz-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; -webkit-transition: all 0.2s ease-out; -webkit-transform: scale(1.01); -moz-transform: scale(1.01); -o-transform: scale(1.01); }
 
 .box_single_number { color: #004085; background-color: #cce5ff59; border-color: #b8daff; border-radius: 3px; padding: 10px 15px; }
 
@@ -541,7 +587,7 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .dropdown-item { padding: 10px; }
 
-.dropdown-menu { margin-top: 25px; color: #ecf5fe; box-shadow: 0 2px 18px rgba(0, 0, 0, 0.09); border: none; border-radius: 0px; text-transform: initial; padding: 7px; }
+.dropdown-menu { margin-top: 22px; color: #ecf5fe; box-shadow: 0 2px 18px rgba(0, 0, 0, 0.09); border: none; border-radius: 0px; text-transform: initial; padding: 7px; }
 
 @media screen and (max-width: 320px) { .dropdown-menu { font-size: 14px; color: #fff; } }
 
@@ -596,7 +642,7 @@ input[type="search"]::placeholder { color: #000; }
 
 .modal .custom-control-label a:hover { text-decoration: none; }
 
-.modal-header { border-bottom: none; background-color: #ffffff; color: #fff; border-top: 15px solid #5ba4dd; }
+.modal-header { border-bottom: none; background-color: #ffffff; color: #fff; border-top: 15px solid #005bbb; }
 
 .modal-footer { justify-content: flex-start; border-top: none; padding: 0px 75px 75px; }
 
@@ -644,13 +690,13 @@ input ~ label[for="soglasie"] { width: 100%; font-size: 16px; margin: 25px 0px 0
 
 input ~ label[for="sogl"] { width: 100%; font-size: 16px; margin: 10px 0px 0px 10px; padding: 0px; }
 
-.button__to__send_zayavka__formmodal { background-color: #3eb5f1; border: none; color: #fff; font-size: 16px; border-radius: 3px; cursor: pointer; text-transform: uppercase; padding: 12px 45px; }
+.button__to__send_zayavka__formmodal { background-color: #005bbb; border: none; color: #fff; font-size: 16px; border-radius: 3px; cursor: pointer; text-transform: uppercase; padding: 12px 45px; }
 
 @media screen and (max-width: 450px) { .button__to__send_zayavka__formmodal { padding: 15px; } }
 
-.button__to__send_zayavka__formmodal:hover { background-color: #47bbf5; }
+.button__to__send_zayavka__formmodal:hover { background-color: #0268d4; }
 
-.button__to__send_zayavka__formmodal:active { background-color: #35a9e4; }
+.button__to__send_zayavka__formmodal:active { background-color: #024286; }
 
 /* Выбор несколько из списка */
 .choose__item .items { list-style: none; padding: 0; margin: 0; }
