--- a/mainapp/templates/mainapp/includes/footer.html
+++ b/mainapp/templates/mainapp/includes/footer.html
@@ -23,7 +23,7 @@
                 <p class="header__text__footer">Информация</p>
                 <div class="menu__footer">
                     <ul class="spisok__footer">
-                        <a href="{% link_holder 'ABOUT' %}">
+                        <a href="{% url 'center' %}#page-top">
                             <li>Центр аттестации</li>
                         </a>
                         <a href="{% link_holder 'SERVICES' %}">
